--- a/css/styles.css
+++ b/css/styles.css
@@ -8,12 +8,12 @@
 
 body {
     height: 100vh;
-    background-color: #3D4455;
+    background-color: #404454;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap:38px;
+    gap:25px;
 }
 
 .calculator{
@@ -23,7 +23,7 @@ body {
     background-color: #2C3333;
     display: flex;
     flex-direction: column;
-    margin-top: 70px;
+    margin-top: 60px;
 
 
 }
@@ -116,7 +116,8 @@ body {
     width: 450px;
     border-radius: 10px;
     background-color: rgba(44, 51, 51, 0.2);
-    padding: 15px;
+    margin-bottom: 40px;
+    padding: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -144,4 +145,29 @@ p{
 
 strong{
     color:#ED7C3F
+}
+
+.footer{
+    position: absolute;
+    bottom:0;
+    display:flex;
+    align-items: center;
+    margin-bottom:15px;
+    gap:12px;
+}
+
+.icon{
+    position:absolute;
+    bottom:0;
+    width: 24px;
+    opacity: 0.8;
+}
+
+.icon:hover{
+    transform: scale(1.2);
+    filter: sepia(1) hue-rotate(150deg) saturate(15);
+}
+
+.footnote{
+    font-size: 16px;
 }
