--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,9 @@
 }
 
 body {
-    height: 100vh;
+    min-height: 100vh;
+    padding-top: 75px;
+    padding-bottom: 10px;
     background-color: #404454;
     display: flex;
     flex-direction: column;
@@ -23,7 +25,7 @@ body {
     background-color: #2C3333;
     display: flex;
     flex-direction: column;
-    margin-top: 60px;
+
 
 
 }
@@ -116,7 +118,7 @@ body {
     width: 450px;
     border-radius: 10px;
     background-color: rgba(44, 51, 51, 0.2);
-    margin-bottom: 40px;
+    margin-bottom: 10px;
     padding: 10px;
     display: flex;
     flex-direction: column;
@@ -148,11 +150,9 @@ strong{
 }
 
 .footer{
-    position: absolute;
-    bottom:0;
+    position: relative;
     display:flex;
     align-items: center;
-    margin-bottom:15px;
     gap:12px;
 }
 
